--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="#FFEB3B"
+            android:backgroundTint="@android:color/holo_orange_light"
             android:text="Good Bye" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
